--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <body>
   <h1>For Malik's Innocence</h1>
     <ul>
-      <li><a href=""
+      <li><a href="https://www.apple.com">About</a></li>
+    </ul>
+    <ul>
+      <li><a href="https://www.apple.com">Story</a></li>
+    </ul>
 </body>
 </html>
