--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>For Malik's Innocence</h1>
     <ul>
-      <li><a href="https://www.apple.com">About</a></li>
+      <li><a href="https://dilloncg.github.io/For-Maliks-Innocence-About/"/index.html>About</a></li>
     </ul>
     <ul>
       <li><a href="https://www.apple.com">Story</a></li>
