--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <li><a href="https://dilloncg.github.io/For-Maliks-Innocence-About/"/index.html>About</a></li>
     </ul>
     <ul>
-      <li><a href="https://www.apple.com">Story</a></li>
+      <li><a href="https://dilloncg.github.io/For-Maliks-Innocence-Story/"/index.html>Story</a></li>
     </ul>
 </body>
 </html>
