--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>For Malik's Innocence</title>
+    <title>Malik is Innocent</title>
     <link rel="stylesheet" href="style.css">
   </head>
 <body>
-  <h1>For Malik's Innocence</h1>
-    <ul>
-      <li><a href="https://dilloncg.github.io/For-Maliks-Innocence-About/"/index.html>About</a></li>
-    </ul>
-    <ul>
-      <li><a href="https://dilloncg.github.io/For-Maliks-Innocence-Story/"/index.html>Story</a></li>
-    </ul>
+  <h1>Malik is Innocent</h1>
+  <img src="malik.png">
+  <p>Meet Malik Gary, Armstrong High School Graduate. He is thoughtful,
+      intelligent, soft-spoken, a leader among his friends, and an all-around
+      wonderful young man. While visiting family in Richmond in July 2020,
+      he was in the wrong place at the wrong time and was arrested for a
+      serious crime of which I know he is innocent. This website is dedicated to
+      sharing his story.</p>
+      <a href="https://dilloncg.github.io/For-Maliks-Innocence-Story/"/index.html>Story</a>
 </body>
 </html>
